[package]
name = "radiko-rs"
version = "0.1.0"
authors = ["h49k <hosodahajime@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ureq = "1.5.2"
ureq = "2.0.1"
substring = "1.4.5"
base64 = "0.13.0"
regex = "1.4.3"
subprocess = "0.2.6"